--- a/tests/Notification/fixtures/receiveNotificationValidation.yaml
+++ b/tests/Notification/fixtures/receiveNotificationValidation.yaml
@@ -51,6 +51,31 @@ tests:
                     status: Accepted
                     requestReference:
                         requesterCode: AGRI
+                        year: 1984
+                        number: -1
+                        part: -2
+                        version: -3
+                        productType: InvalidProductType
+        expectations:
+            assertions:
+                - count(violations) === 5
+                - violations.get(0).getMessage() === 'This value is not valid.'
+                - violations.get(0).getPropertyPath() === 'notification.linguisticRequest.requestReference.year'
+                - violations.get(1).getMessage() === 'This value should be either positive or zero.'
+                - violations.get(1).getPropertyPath() === 'notification.linguisticRequest.requestReference.number'
+                - violations.get(2).getMessage() === 'This value should be either positive or zero.'
+                - violations.get(2).getPropertyPath() === 'notification.linguisticRequest.requestReference.part'
+                - violations.get(3).getMessage() === 'This value should be either positive or zero.'
+                - violations.get(3).getPropertyPath() === 'notification.linguisticRequest.requestReference.version'
+                - violations.get(4).getMessage() === 'Choose a valid "productType".'
+                - violations.get(4).getPropertyPath() === 'notification.linguisticRequest.requestReference.productType'
+    -   data:
+            notification:
+                notificationType: RequestStatusChange
+                linguisticRequest:
+                    status: Accepted
+                    requestReference:
+                        requesterCode: AGRI
                         year: 2022
                         number: 81
                         part: 0
