--- a/tests/Notification/fixtures/receiveNotificationValidation.yaml
+++ b/tests/Notification/fixtures/receiveNotificationValidation.yaml
@@ -67,7 +67,7 @@ tests:
                 - violations.get(2).getPropertyPath() === 'notification.linguisticRequest.requestReference.part'
                 - violations.get(3).getMessage() === 'This value should be either positive or zero.'
                 - violations.get(3).getPropertyPath() === 'notification.linguisticRequest.requestReference.version'
-                - violations.get(4).getMessage() === 'Choose a valid "productType".'
+                - strpos(violations.get(4).getMessage(), 'Choose a valid "productType"') === 0
                 - violations.get(4).getPropertyPath() === 'notification.linguisticRequest.requestReference.productType'
     -   data:
             notification:
