--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,10 @@
         "openeuropa/code-review": "^2.0",
         "openeuropa/task-runner": "^2@alpha",
         "php-http/guzzle6-adapter": "^2.0",
+        "phpdocumentor/reflection-docblock": "^5",
         "phpunit/phpunit": "~9.5",
-        "symfony/property-access": "~4",
         "symfony/expression-language": "~4",
+        "symfony/property-access": "~4",
         "symfony/property-info": "~4",
         "symfony/serializer": "~4"
     },
