--- a/config/validator/notification.yaml
+++ b/config/validator/notification.yaml
@@ -66,13 +66,27 @@ OpenEuropa\EPoetry\Notification\Type\RequestReference:
                         - SPO
 
 OpenEuropa\EPoetry\Notification\Type\Product:
+    constraints:
+        -   OpenEuropa\EPoetry\Validation\Constraints\ProductConstraint: ~
+
     properties:
         productReference:
             -   Valid: ~
         status:
             -   Choice:
                     choices: [ Accepted, Closed, Ongoing, ReadyToBeSent, Suspended, Cancelled, Sent, Rejected, Requested, Invalid ]
-                    message: Choose a valid product status.
+                    message: |
+                        Choose a valid product status:
+                        - Accepted
+                        - Closed
+                        - Ongoing
+                        - ReadyToBeSent
+                        - Suspended
+                        - Cancelled
+                        - Sent
+                        - Rejected
+                        - Requested
+                        - Invalid
 
 OpenEuropa\EPoetry\Notification\Type\ProductReference:
     properties:
