--- a/config/validator/notification.yaml
+++ b/config/validator/notification.yaml
@@ -90,7 +90,25 @@ OpenEuropa\EPoetry\Notification\Type\Product:
         format:
             -   Choice:
                     choices: [ XLS, XLSX, DOC, DOCX, PPTX, PPT, HTM, HTML, RTF, VSD, PDF, TIF, ZIP, TIFF, TXT, XML, XMW ]
-                    message: Choose a valid file format.
+                    message: |
+                        Choose a valid file format:
+                        - XLS
+                        - XLSX
+                        - DOC
+                        - DOCX
+                        - PPTX
+                        - PPT
+                        - HTM
+                        - HTML
+                        - RTF
+                        - VSD
+                        - PDF
+                        - TIF
+                        - ZIP
+                        - TIFF
+                        - TXT
+                        - XML
+                        - XMW
 
 OpenEuropa\EPoetry\Notification\Type\ProductReference:
     properties:
