--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "require": {
         "php": ">=8.0",
         "ext-soap": "*",
+        "cweagans/composer-patches": "^1",
         "nyholm/psr7": "^1.4",
         "phpro/soap-client": "~2.0.0",
         "psr/log": "~1",
@@ -32,7 +33,8 @@
         "sort-packages": true,
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true,
-            "phpro/grumphp": true
+            "phpro/grumphp": true,
+            "cweagans/composer-patches": true
         }
     },
     "autoload": {
@@ -47,5 +49,12 @@
     },
     "bin": ["bin/epoetry"],
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "extra": {
+        "patches": {
+            "phpro/soap-client" : {
+                "https://github.com/phpro/soap-client/issues/446": "./patches/soap_client-remove_type_checker.patch"
+            }
+        }
+    }
 }
