EWPP-2489: Add ECAS proxy ticket in SOAP envelop header.

--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,10 @@
         "php": ">=8.0",
         "ext-soap": "*",
         "cweagans/composer-patches": "^1",
+        "php-http/guzzle6-adapter": "^2.0",
         "nyholm/psr7": "^1.4",
         "phpro/soap-client": "~2.0.0",
         "psr/log": "~1",
-        "symfony/http-client": "~4",
         "symfony/validator": "~4",
         "veewee/xml": "^1.0"
     },
@@ -18,7 +18,7 @@
         "doctrine/annotations": "^1.13",
         "openeuropa/code-review": "^2.0",
         "openeuropa/task-runner": "^2@alpha",
-        "php-http/guzzle6-adapter": "^2.0",
+        "php-http/mock-client": "^1.5",
         "phpdocumentor/reflection-docblock": "^5",
         "phpunit/phpunit": "~9.5",
         "symfony/expression-language": "~4",
