EWPP-2611: Pass event dispatcher to console commands.

--- a/config/console/services.yml
+++ b/config/console/services.yml
@@ -5,6 +5,7 @@ services:
 
   Psr\Log\LoggerInterface: "@logger"
   Symfony\Component\Serializer\SerializerInterface: "@serializer"
+  Symfony\Component\EventDispatcher\EventDispatcherInterface: "@event_dispatcher"
 
   OpenEuropa\EPoetry\:
     resource: '../../src'
