--- a/composer.json
+++ b/composer.json
@@ -7,16 +7,17 @@
         "php": ">=8.0",
         "ext-soap": "*",
         "cweagans/composer-patches": "^1",
-        "facile-it/php-openid-client": "^0.3.1",
         "nyholm/psr7": "^1.4",
         "php-http/guzzle6-adapter": "^2.0",
         "phpro/soap-client": "~2.0.0",
         "psr/log": "~1",
         "symfony/validator": "~4",
         "veewee/xml": "^1.0",
-        "web-token/jwt-signature-algorithm-hmac": "*"
+        "symfony/serializer": "~4"
     },
     "require-dev": {
+        "facile-it/php-openid-client": "^0.3.1",
+        "web-token/jwt-signature-algorithm-hmac": "~3.1",
         "doctrine/annotations": "^1.13",
         "monolog/monolog": "^2.8",
         "openeuropa/code-review": "^2.0",
@@ -28,11 +29,12 @@
         "symfony/http-kernel": "~4",
         "symfony/monolog-bridge": "~5",
         "symfony/property-access": "~4",
-        "symfony/property-info": "~4",
-        "symfony/serializer": "~4"
+        "symfony/property-info": "~4"
     },
     "suggest": {
-        "symfony/console": "The Symfony Console component eases the creation of command line interfaces. Require this in your project if you wish to use the ePoetry Console."
+        "symfony/console": "The Symfony Console component eases the creation of command line interfaces. Require this in your project if you wish to use the ePoetry Console.",
+        "facile-it/php-openid-client": "Require this in your project if you use the OpenID Connect authentication plugin.",
+        "web-token/jwt-signature-algorithm-hmac": "Require this in your project if you use the OpenID Connect authentication plugin."
     },
     "config": {
         "sort-packages": true,
