EWPP-2611: Move SOAP authentication codebase as an optional plugin.

--- a/runner.yml.dist
+++ b/runner.yml.dist
@@ -16,7 +16,9 @@ commands:
     - "./vendor/bin/soap-client generate:client --config=$(pwd)/config/soap-client-notification.php"
 
   generate:authentication:
-    - { task: "remove", file: "src/Authentication/Type" }
+    - { task: "remove", file: "src/ClientCertificate/Type" }
+    - { task: "remove", file: "src/ClientCertificate/ClientCertificateClassmap.php" }
+    - { task: "remove", file: "src/ClientCertificate/ClientCertificateClient.php" }
     - "./vendor/bin/soap-client generate:types --config=$(pwd)/config/soap-client-authentication.php"
     - "./vendor/bin/soap-client generate:classmap --config=$(pwd)/config/soap-client-authentication.php"
     - "./vendor/bin/soap-client generate:client --config=$(pwd)/config/soap-client-authentication.php"
