--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "phpdocumentor/reflection-docblock": "^5",
         "phpunit/phpunit": "~9.5",
         "symfony/expression-language": "~4",
+        "symfony/http-client": "~4",
         "symfony/http-kernel": "~4",
         "symfony/monolog-bridge": "~5",
         "symfony/property-access": "~4",
@@ -34,7 +35,8 @@
     "suggest": {
         "symfony/console": "The Symfony Console component eases the creation of command line interfaces. Require this in your project if you wish to use the ePoetry Console.",
         "facile-it/php-openid-client": "Require this in your project if you use the OpenID Connect authentication plugin.",
-        "web-token/jwt-signature-algorithm-hmac": "Require this in your project if you use the OpenID Connect authentication plugin."
+        "web-token/jwt-signature-algorithm-hmac": "Require this in your project if you use the OpenID Connect authentication plugin.",
+        "symfony/http-client": "Require this in your project if you use the client certificate authentication plugin."
     },
     "config": {
         "sort-packages": true,
