--- a/composer.json
+++ b/composer.json
@@ -16,21 +16,22 @@
         "symfony/serializer": "~4"
     },
     "require-dev": {
-        "facile-it/php-openid-client": "^0.3.1",
-        "web-token/jwt-signature-algorithm-hmac": "~3.1",
         "doctrine/annotations": "^1.13",
+        "facile-it/php-openid-client": "^0.3.1",
         "monolog/monolog": "^2.8",
         "openeuropa/code-review": "^2.0",
         "openeuropa/task-runner": "^2@alpha",
         "php-http/mock-client": "^1.5",
         "phpdocumentor/reflection-docblock": "^5",
         "phpunit/phpunit": "~9.5",
+        "symfony/dotenv": "~4",
         "symfony/expression-language": "~4",
         "symfony/http-client": "~4",
         "symfony/http-kernel": "~4",
         "symfony/monolog-bridge": "~5",
         "symfony/property-access": "~4",
-        "symfony/property-info": "~4"
+        "symfony/property-info": "~4",
+        "web-token/jwt-signature-algorithm-hmac": "~3.1"
     },
     "suggest": {
         "symfony/console": "The Symfony Console component eases the creation of command line interfaces. Require this in your project if you wish to use the ePoetry Console.",
