--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "require": {
         "php": ">=8.0",
         "ext-soap": "*",
+        "ext-dom": "*",
         "cweagans/composer-patches": "^1",
         "nyholm/psr7": "^1.4",
         "php-http/guzzle6-adapter": "^2.0",
