--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
-EPOETRY_CONSOLE_AUTH_CLIENT_METADATA=/var/www/html/client-metadata.json
 EPOETRY_CONSOLE_ENV=dev
-EPOETRY_CONSOLE_DEBUG=false
+EPOETRY_CONSOLE_DEBUG=0
+EPOETRY_CONSOLE_AUTH_CLIENT_METADATA=/var/www/html/.sink/client-metadata.json
+EPOETRY_CONSOLE_WELL_KNOWN_URL=https://ecas.acceptance.ec.europa.eu/cas/oauth2/.well-known/openid-configuration
+EPOETRY_CONSOLE_SERVICE_URL=https://www.test.cc.cec/epoetry/webservices/dgtService
+EPOETRY_CONSOLE_TOKEN_ENDPOINT=https://ecas.acceptance.ec.europa.eu/cas/oauth2/token
