--- a/.env
+++ b/.env
@@ -6,6 +6,6 @@ EPOETRY_CONSOLE_OPENID_SERVICE_URL=https://www.test.cc.cec/epoetry/webservices/d
 EPOETRY_CONSOLE_OPENID_TOKEN_ENDPOINT=https://ecas.acceptance.ec.europa.eu/cas/oauth2/token
 EPOETRY_CONSOLE_SERVICE_URL=https://webgate.acceptance.ec.europa.eu/epoetrytst/epoetry/webservices/dgtService
 
-EPOETRY_CONSOLE_CLENT_CERT_SERVICE_URL=https://ecasa.cc.cec.eu.int:7003/cas/ws/CertLoginService/soap/1.1
+EPOETRY_CONSOLE_CLENT_CERT_SERVICE_URL=https://www.test.cc.cec/epoetry/webservices/dgtService
 EPOETRY_CONSOLE_CLENT_CERT_PATH=/var/www/html/.sink/certs/j905dyi.p12
 EPOETRY_CONSOLE_CLENT_CERT_PASSWORD=password
