EWPP-2722: Improve readme and fix review comments.

--- a/runner.yml.dist
+++ b/runner.yml.dist
@@ -2,6 +2,7 @@ commands:
   generate:
     - "./vendor/bin/run generate:request"
     - "./vendor/bin/run generate:notification"
+    - "./vendor/bin/run generate:authentication"
 
   generate:request:
     - { task: "remove", file: "src/Request/Type" }
