--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,6 @@
     },
     "require-dev": {
         "doctrine/annotations": "^1.13",
-        "facile-it/php-openid-client": "^0.3.1",
         "monolog/monolog": "^2.8",
         "openeuropa/code-review": "^2.0",
         "openeuropa/task-runner": "^2@alpha",
@@ -33,13 +32,12 @@
         "symfony/http-kernel": "~4",
         "symfony/monolog-bridge": "~5",
         "symfony/property-access": "~4",
-        "symfony/property-info": "~4",
-        "web-token/jwt-signature-algorithm-hmac": "~3.1"
+        "symfony/property-info": "~4"
     },
     "suggest": {
         "symfony/console": "The Symfony Console component eases the creation of command line interfaces. Require this in your project if you wish to use the ePoetry Console.",
         "facile-it/php-openid-client": "Require this in your project if you use the OpenID Connect authentication plugin.",
-        "web-token/jwt-signature-algorithm-hmac": "Require this in your project if you use the OpenID Connect authentication plugin.",
+        "web-token/jwt-signature-algorithm-hmac": "Require this in your project if you use the OpenID Connect authentication plugin. It requres php >=8.1.",
         "symfony/http-client": "Require this in your project if you use the client certificate authentication plugin."
     },
     "config": {
