EWPP-2877: Add EU Login basepath.

--- a/.env
+++ b/.env
@@ -8,4 +8,5 @@ EPOETRY_CONSOLE_SERVICE_URL=https://webgate.acceptance.ec.europa.eu/epoetrytst/e
 EPOETRY_CONSOLE_CLENT_CERT_SERVICE_URL=https://www.test.cc.cec/epoetry/webservices/dgtService
 EPOETRY_CONSOLE_CLENT_CERT_PATH=/var/www/html/.sink/certs/j905dyi.p12
 EPOETRY_CONSOLE_CLENT_CERT_PASSWORD=password
+EPOETRY_CONSOLE_CLENT_EU_LOGIN_BASEPATH=https://ecas.cc.cec.eu.int:7003
 EPOETRY_CONSOLE_CALLBACK_URL=0.0.0.0:8088
