--- a/tests/Request/fixtures/createLinguisticRequest.yaml
+++ b/tests/Request/fixtures/createLinguisticRequest.yaml
@@ -12,6 +12,7 @@ x-default-request-details: &default-request-details
         product:
             -   requestedDeadline: '2040-07-01T11:51:00+01:00'
                 language: FR
+                trackChanges: false
     contacts:
         contact:
             -   userId: liekejo
@@ -255,6 +256,7 @@ tests:
                     product:
                         -   requestedDeadline: '2040-07-01T11:51:00+01:00'
                             language: FR
+                            trackChanges: true
                 contacts:
                     contact:
                         -   userId: liekejo
@@ -610,6 +612,7 @@ tests:
                 products:
                     product:
                         -   language: ''
+                            trackChanges: true
         expectations:
             assertions:
                 - count(violations) === 2
