--- a/config/validator/request.yaml
+++ b/config/validator/request.yaml
@@ -299,3 +299,10 @@ OpenEuropa\EPoetry\Request\Type\AddNewPartToDossier:
         templateName:
             - NotBlank: ~
             - Choice: *templateNameChoice
+
+OpenEuropa\EPoetry\Request\Type\GetLinguisticRequest:
+    properties:
+        requestReference:
+            - Valid: ~
+        applicationName:
+            - NotBlank: ~
